.provarCaches/00D5f000005vwGkEAI/objects/rstk__socontract__c.object
<CustomObject>
    <fields>
        <fullName>rstk__socontract_termuom__c</fullName>
        <inlineHelpText>The Contract Term &quot;unit of measure&quot;.  Options are &apos;Months&apos;, &apos;Quarters&apos; or &apos;Years&apos;.</inlineHelpText>
        <label>Contract Term UOM</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                    <default>true</default>
                    <label>Month</label>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_totalcogs__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total COGS</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totchargebw__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Copy Charge - Mono</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totchargecol__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Copy Charge - Color</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totchargescan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Copy Charge - Scan</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totcheqback__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Cheque Back</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totdiscount__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Discounts</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totequipsales__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Equipment Sales</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totmincopybw__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Minimum - Mono</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totmincopycol__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Minimum - Color</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totmincopyscan__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Minimum - Scan</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totpayout__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Payout</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totprodgives__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Product Credit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totrentcred__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Rental Credit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totsponser__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Total Sponsorship</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_totsrvcred__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Service Credit</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__socontract_type__c</fullName>
        <description>This can be used to define the different types of contracts that may be used, and is a selection users can use to select which Contract Types desired to bill in a billing run. Current picklist values are ‘Purchase’, ‘Flexi’, ‘Value Plan’ and ‘Lease’, but these can be changed by the user (a System Administrator) to reflect the business’s unique needs. This field is only used to categorize Contracts if required and does not drive any functionality in the system.</description>
        <inlineHelpText>Can be used to define different types of contracts that may be used, &amp; is used to select which Contract Types desired to bill in a billing run. Current picklist values are ‘Purchase’, ‘Flexi’, ‘Value Plan’ &amp; ‘Lease’.  See page help for more detail.</inlineHelpText>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Purchase</fullName>
                </value>
                <value>
                    <fullName>Flexi</fullName>
                </value>
                <value>
                    <fullName>Value Plan</fullName>
                </value>
                <value>
                    <fullName>Lease</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_washup__c</fullName>
        <label>Wash Up</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>-none-</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__socontract_xferprice__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Transfer Price</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Contract Master</label>
    <listViews>
        <fullName>MS_Contract_Master</fullName>
        <columns>NAME</columns>
        <columns>rstk__socontract_contractid__c</columns>
        <columns>rstk__socontract_constatus__c</columns>
        <columns>rstk__socontract_term__c</columns>
        <columns>rstk__socontract_socust__c</columns>
        <columns>rstk__socontract_type__c</columns>
        <columns>rstk__socontract_chargetype__c</columns>
        <columns>rstk__socontract_status__c</columns>
        <columns>rstk__socontract_dealvalue__c</columns>
        <columns>rstk__socontract_delprice__c</columns>
        <columns>rstk__socontract_deposit__c</columns>
        <columns>rstk__socontract_netrevenue__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>MS_Contract Master</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>rstk__RS_Contract_Maintenance</fullName>
        <columns>NAME</columns>
        <columns>rstk__socontract_div__c</columns>
        <columns>rstk__socontract_socust__c</columns>
        <columns>rstk__socontract_constatus__c</columns>
        <columns>rstk__socontract_contractid__c</columns>
        <columns>rstk__socontract_opportunity__c</columns>
        <columns>rstk__socontract_type__c</columns>
        <columns>rstk__socontract_term__c</columns>
        <columns>rstk__socontract_status__c</columns>
        <columns>rstk__socontract_eststartdate__c</columns>
        <columns>rstk__socontract_deposit__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__socontract_pricecust__c</columns>
        <columns>rstk__socontract_otherchgs__c</columns>
        <filterScope>Everything</filterScope>
        <label>Contract Maintenance</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Activation_Grace_Period</fullName>
        <active>true</active>
        <description>Activation Grace Period (Days)  cannot be less than zero.</description>
        <errorConditionFormula>!ISBLANK( rstk__socontract_actgracedays__c ) &amp;&amp; rstk__socontract_actgracedays__c &lt; 0</errorConditionFormula>
        <errorMessage>Activation Grace Period (Days)  cannot be less than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cannot_change_monthly_or_total_minimum</fullName>
        <active>true</active>
        <description>Cannot change monthly or total minimum values when Minimum Committed Volume is enabled</description>
        <errorConditionFormula>AND(NOT(rstk__socontract_mincomvol__c),  OR(ISCHANGED(rstk__socontract_monmincopycol__c), ISCHANGED(rstk__socontract_monmincopybw__c), ISCHANGED(rstk__socontract_monmincopyscan__c), ISCHANGED(rstk__socontract_totmincopycol__c), ISCHANGED(rstk__socontract_totmincopybw__c), ISCHANGED(rstk__socontract_totmincopyscan__c)))</errorConditionFormula>
        <errorMessage>Cannot change monthly or total minimum values when Minimum Committed Volume is enabled</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cant_change_contract_id</fullName>
        <active>true</active>
        <description>Can&apos;t change contract id</description>
        <errorConditionFormula>ISCHANGED(rstk__socontract_contractid__c)</errorConditionFormula>
        <errorMessage>The Contract ID cannot be changed after the Contract is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cant_change_customer</fullName>
        <active>true</active>
        <description>Customer is required and  cannot be changed after the Contract is created.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_socust__c)</errorConditionFormula>
        <errorMessage>Customer is required and  cannot be changed after the Contract is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Cant_change_division</fullName>
        <active>true</active>
        <description>Sales Division required and  cannot be changed after the Contract is created.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_div__c) || (! ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_div__c))</errorConditionFormula>
        <errorMessage>Sales Division required and  cannot be changed after the Contract is created.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Contract_Term</fullName>
        <active>true</active>
        <description>Contract Term is Required and must be greater than zero.</description>
        <errorConditionFormula>ISBLANK( rstk__socontract_term__c ) || rstk__socontract_term__c  &lt;= 0</errorConditionFormula>
        <errorMessage>Contract Term is Required and must be greater than zero.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Contract_Terms_Template</fullName>
        <active>false</active>
        <description>Contract Terms Template is not modifiable as Contract not in Draft status,also it should be active and should belong to contract Division.</description>
        <errorConditionFormula>(!ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_soctt__c ) &amp;&amp; TEXT(rstk__socontract_constatus__c ) &lt;&gt; &apos;Draft&apos;) || (!ISBLANK(rstk__socontract_soctt__c) &amp;&amp; ( rstk__socontract_soctt__r.rstk__soctt_div__c  &lt;&gt;  rstk__socontract_div__c  ||  !rstk__socontract_soctt__r.rstk__soctt_active__c ) )</errorConditionFormula>
        <errorMessage>Contract Terms Template is not modifiable as Contract not in Draft status,also it should be active and should belong to contract Division.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Customer_for_Recurring_Billings</fullName>
        <active>true</active>
        <description>Customer for Recurring Billing is Required and not modifiable as Contract not in Draft status.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_servicecust__c)</errorConditionFormula>
        <errorMessage>Customer for Recurring Billing is Required and not modifiable as Contract not in Draft status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__First_Full_RB_Period_Start_Dt_Validation</fullName>
        <active>true</active>
        <description>First Full RB Period Start Date must be greater than Recurring Billing Start Date</description>
        <errorConditionFormula>NOT(ISBLANK(rstk__socontract_rcbfirstfull__c)) &amp;&amp; (rstk__socontract_rcbfirstfull__c &lt;= rstk__socontract_rcbstart__c)</errorConditionFormula>
        <errorMessage>First Full RB Period Start Date must be greater than Recurring Billing Start Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Hardware_Installation_Customer</fullName>
        <active>true</active>
        <description>Hardware Installation Customer is Required and not modifiable as Contract not in Draft status.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_installcust__c)</errorConditionFormula>
        <errorMessage>Hardware Installation Customer is Required and not modifiable as Contract not in Draft status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Installation_Customer_Address</fullName>
        <active>true</active>
        <description>Installation Customer Address is Required, should be Valid Address for Installation and also should belong to Hardware Installation Customer.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_icustinstaddr__c) || rstk__socontract_icustinstaddr__r.rstk__socaddr_custno__c &lt;&gt; rstk__socontract_installcust__c  || (!rstk__socontract_icustinstaddr__r.rstk__socaddr_defaultinstall__c &amp;&amp; !rstk__socontract_icustinstaddr__r.rstk__socaddr_useasinstall__c)</errorConditionFormula>
        <errorMessage>Installation Customer Address is Required, should be Valid Address for Installation and also should belong to Hardware Installation Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Master_Services_Agreement</fullName>
        <active>false</active>
        <description>Master Services Agreement is not modifiable as Contract not in Draft status,also it should be active and belong to Contract Customer.</description>
        <errorConditionFormula>(!ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_socustmsa__c ) &amp;&amp; TEXT(rstk__socontract_constatus__c ) &lt;&gt; &apos;Draft&apos;) || (!ISBLANK(rstk__socontract_socustmsa__c) &amp;&amp; ( rstk__socontract_socustmsa__r.rstk__socustmsa_socust__c &lt;&gt; rstk__socontract_socust__c ||  !rstk__socontract_socustmsa__r.rstk__socustmsa_active__c ))</errorConditionFormula>
        <errorMessage>Master Services Agreement is not modifiable as Contract not in Draft status,also it should be active and belong to Contract Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Opportunity_Cannot_be_modified</fullName>
        <active>true</active>
        <description>Opportunity Cannot be modified</description>
        <errorConditionFormula>ISCHANGED(rstk__socontract_opportunity__c)</errorConditionFormula>
        <errorDisplayField>rstk__socontract_opportunity__c</errorDisplayField>
        <errorMessage>Opportunity Cannot be modified</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Pricing_Customer</fullName>
        <active>true</active>
        <description>Pricing Customer is Required and not modifiable as Contract not in Draft status.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_pricecust__c)</errorConditionFormula>
        <errorMessage>Pricing Customer is Required and not modifiable as Contract not in Draft status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Recurring_Billing_Frequency</fullName>
        <active>true</active>
        <description>Recurring Billing Frequency is not modifiable as Last Recurring Bill Thru Date  in already set.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_rcbfreq__c) &amp;&amp; !ISNULL(rstk__socontract_rcblastthru__c )</errorConditionFormula>
        <errorMessage>Recurring Billing Frequency is not modifiable as Last Recurring Bill Thru Date  in already set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Recurring_Billing_Start_Date</fullName>
        <active>true</active>
        <description>Recurring Billing Start Date is not modifiable as Last Recurring Bill Thru Date  in already set.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_rcbstart__c) &amp;&amp; !ISNULL(rstk__socontract_rcblastthru__c )</errorConditionFormula>
        <errorMessage>Recurring Billing Start Date is not modifiable as Last Recurring Bill Thru Date  in already set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Recurring_Billings_in_Advance</fullName>
        <active>true</active>
        <description>Recurring Billings in Advance field is not modifiable as Last Recurring Bill Thru Date  in already set.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_rcbadvance__c) &amp;&amp; !ISNULL(rstk__socontract_rcblastthru__c )</errorConditionFormula>
        <errorMessage>Recurring Billings in Advance field is not modifiable as Last Recurring Bill Thru Date  in already set.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Customer</fullName>
        <active>true</active>
        <description>Sales Customer is Required and not modifiable as Contract not in Draft status.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_sohdrcust__c)</errorConditionFormula>
        <errorMessage>Sales Customer is Required and not modifiable as Contract not in Draft status.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Customer_BillTo_Address</fullName>
        <active>true</active>
        <description>Sales Customer Bill-To Address is Required , should be Valid  Address for Billing and also  should belong to Sales Customer.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_btaddr__c) ||  rstk__socontract_btaddr__r.rstk__socaddr_custno__c &lt;&gt; rstk__socontract_sohdrcust__c || (!rstk__socontract_btaddr__r.rstk__socaddr_defaultbillto__c &amp;&amp; !rstk__socontract_btaddr__r.rstk__socaddr_useasbillto__c)</errorConditionFormula>
        <errorMessage>Sales Customer Bill-To Address is Required , should be Valid  Address for Billing and also  should belong to Sales Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Customer_ShipTo_Address</fullName>
        <active>true</active>
        <description>Sales Customer Ship-To Address is Required, should be Valid Address for Shipping  and also should belong to Sales Customer.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_staddr__c)|| rstk__socontract_staddr__r.rstk__socaddr_custno__c &lt;&gt; rstk__socontract_sohdrcust__c || (!rstk__socontract_staddr__r.rstk__socaddr_defaultshipto__c &amp;&amp; !rstk__socontract_staddr__r.rstk__socaddr_useasshipto__c)</errorConditionFormula>
        <errorMessage>Sales Customer Ship-To Address is Required, should be Valid Address for Shipping  and also should belong to Sales Customer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Sales_Division</fullName>
        <active>true</active>
        <description>Sales Division is required and not Modifiable.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_div__c ) || (! ISNEW() &amp;&amp; ISCHANGED(rstk__socontract_div__c) )</errorConditionFormula>
        <errorMessage>Sales Division is required and not Modifiable.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Service_Customer_BillTo_Address</fullName>
        <active>true</active>
        <description>Service Customer Bill-To Address is Required, should be Valid Address for Billing and also should belong to Customer for Recurring Billings.</description>
        <errorConditionFormula>ISBLANK(rstk__socontract_scustbtaddr__c) || rstk__socontract_scustbtaddr__r.rstk__socaddr_custno__c &lt;&gt; rstk__socontract_servicecust__c || (!rstk__socontract_scustbtaddr__r.rstk__socaddr_defaultbillto__c &amp;&amp; !rstk__socontract_scustbtaddr__r.rstk__socaddr_useasbillto__c)</errorConditionFormula>
        <errorMessage>Service Customer Bill-To Address is Required, should be Valid Address for Billing and also should belong to Customer for Recurring Billings.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__socontract_taxloc_validation</fullName>
        <active>false</active>
        <description>Recurring Billing Tax Location cannot be changed to blank value.</description>
        <errorConditionFormula>!ISNEW() &amp;&amp;  ISCHANGED(rstk__socontract_taxloc__c) &amp;&amp;   
!ISBLANK(PRIORVALUE(rstk__socontract_taxloc__c)) &amp;&amp; 
ISBLANK(rstk__socontract_taxloc__c)</errorConditionFormula>
        <errorMessage>Recurring Billing Tax Location cannot be changed to blank value.</errorMessage>
    </validationRules>
</CustomObject>